# connectbot

./: .classpath  .editorconfig  .gitignore  .gitmodules  .linthub.yml  .project  .stickler.yml  .travis.yml  AGENTS.md  AndroidManifest.xml  CHANGELOG.md  CONTRIBUTING.md  Jenkinsfile  README  README.md  ant.properties  build.gradle  build.gradle.kts  build.properties  build.xml  compose-stability.conf  connectbot.sublime-project  default.properties  gradle.properties  plugins.txt  proguard.cfg  proguard.flags  project.properties  settings.gradle  settings.gradle.kts  sonar-project.properties  spotless.gradle
app/: CMakeLists.txt  app-release.apk  build.gradle  build.gradle.kts  proguard-debug.cfg  proguard-tests.cfg  proguard.cfg
app/locale/fortune/: af.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fortune-af.po  fortune-ar.po  fortune-be.po  fortune-bg.po  fortune-ca.po  fortune-cs.po  fortune-da.po  fortune-de.po  fortune-el.po  fortune-en_CA.po  fortune-en_GB.po  fortune-es.po  fortune-eu.po  fortune-fa.po  fortune-fi.po  fortune-fr.po  fortune-gl.po  fortune-he.po  fortune-hr.po  fortune-hu.po  fortune-id.po  fortune-is.po  fortune-it.po  fortune-ja.po  fortune-ka.po  (+61 more)
app/locale/playstore/: af.po  ar.po  bg.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  lo.po  lv.po  playstore-af.po  playstore-ar.po  playstore-bg.po  playstore-cs.po  playstore-de.po  playstore-en_GB.po  playstore-es.po  playstore-eu.po  playstore-fr.po  playstore-gl.po  playstore-it.po  playstore-ja.po  playstore-ko.po  playstore-nl.po  playstore-pt_BR.po  playstore-pt_PT.po  playstore-ro.po  playstore-ru.po  playstore-sl.po  playstore-sv.po  playstore-tr.po  playstore-vi.po  playstore-zh_CN.po  (+11 more)
app/schemas/org.connectbot.data.ConnectBotDatabase/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/androidTest/assets/test_keys/: id_ed25519
app/src/androidTest/resources/test_databases/: complex_hosts.db  complex_pubkeys.db  sample_hosts.db  sample_pubkeys.db
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/help/: Hints.html  PhysicalKeyboard.html  ScreenGestures.html  VirtualKeyboard.html
app/src/main/cpp/: com_google_ase_Exec.cpp  com_google_ase_Exec.h  org_mosh_MoshClient.cpp
app/src/main/jni/: com_google_ase_Exec.cpp
app/src/main/res/anim/: fade_out_delayed.xml  fade_stay_hidden.xml  keyboard_fade_in.xml  keyboard_fade_out.xml  keyboard_shake.xml  slide_left_in.xml  slide_left_out.xml  slide_right_in.xml  slide_right_out.xml
app/src/main/res/color/: blue.xml  green.xml  red.xml
app/src/main/res/drawable/: connected.xml  floating_input_text_background.xml  floating_window_background.xml  floating_window_header_background.xml  ic_add_box.xml  ic_android.xml  ic_close.xml  ic_code.xml  ic_folder_open.xml  ic_font.xml  ic_format_size.xml  ic_keyboard.xml  ic_keyboard_arrow_down.xml  ic_keyboard_arrow_left.xml  ic_keyboard_hide.xml  ic_keyboard_tab.xml  ic_laptop.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_palette.xml  ic_person.xml  ic_qs_connect.xml  ic_screenon.xml  ic_screenon_off.xml  ic_send.xml  ic_shortcut_cloud.xml  ic_shortcut_foreground.xml  ic_shortcut_key.xml  ic_shortcut_server.xml  ic_sync.xml  ic_sync_disabled.xml  ic_text_input.xml  ic_vpn_key.xml  ic_vpn_lock.xml  ic_zip.xml  keyboard_button_border.xml  keyboard_button_selector.xml  keyboard_keyboard_border.xml  pubkey.xml  (+1 more)
app/src/main/res/layout/: act_colors.xml  act_console.xml  act_copyedit.xml  act_eula.xml  act_generatepubkey.xml  act_help.xml  act_help_topic.xml  act_hints.xml  act_hostlist.xml  act_portforwardlist.xml  act_pubkeylist.xml  act_wizard.xml  activity_edit_host.xml  activity_settings.xml  agent_selection_dialog.xml  agent_selection_item.xml  dia_add_host.xml  dia_changepassword.xml  dia_gatherentropy.xml  dia_keyboard_shortcuts.xml  dia_password.xml  dia_portforward.xml  dia_resize.xml  dia_text_entry.xml  floating_input_window.xml  fragment_host_editor.xml  inc_keyboard.xml  item_host.xml  item_portforward.xml  item_pubkey.xml  item_terminal.xml  switch_compat_preference_layout.xml  view_checkablemenuitem.xml  volume_preference_dialog_layout.xml  wiz_eula.xml
app/src/main/res/layout-land/: item_host.xml
app/src/main/res/layout-large/: act_console.xml
app/src/main/res/layout-port/: item_host.xml
app/src/main/res/layout-sw500dp/: act_hints.xml
app/src/main/res/layout-v11/: item_terminal.xml
app/src/main/res/menu/: edit_host_activity_add_menu.xml  edit_host_activity_edit_menu.xml  pubkey_list_activity_menu.xml
app/src/main/res/raw/: busybox  busybox_arm_nopie  busybox_mips_pie  busybox_x86_nopie  busybox_x86_pie  mosh_tar_gz
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rCA/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-he/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-is/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/test/resources/: robolectric.properties
(+1423 files in other folders)
